# Seatsurfing-MCP

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
clawdbot/: clawdbot.plugin.json  index.ts  package.json
commands/: availability.md  book.md  cancel.md  my-bookings.md  refresh.md  setup.md
src/seatsurfing_mcp/: __init__.py
