[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seatsurfing-mcp"
version = "1.1.0"
description = "MCP server for Seatsurfing desk/room booking system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Raul Simpetru" }
]
keywords = ["mcp", "seatsurfing", "booking", "desk-booking", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
seatsurfing-mcp = "seatsurfing_mcp:main"

[project.urls]
Homepage = "https://github.com/RaulSimpetru/Seatsurfing-MCP"
Repository = "https://github.com/RaulSimpetru/Seatsurfing-MCP"

[tool.hatch.build.targets.wheel]
packages = ["src/seatsurfing_mcp"]
